--- a/app/src/main/res/layout/ax_spinner_item.xml
+++ b/app/src/main/res/layout/ax_spinner_item.xml
@@ -2,9 +2,10 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
-    android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
     android:fontFamily="@font/iran_sani"
-    android:textAlignment="inherit"/>
+    android:padding="5dp"
+    android:singleLine="true"
+    android:textAlignment="inherit" />
