--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -121,7 +121,7 @@
             <!--android:layout_marginTop="10dp"-->
             <!--android:textColor="@color/colorWhite"-->
             <!--android:background="@drawable/button_background"-->
-            <!--android:visibility="visible" />-->
+            <!--android:visibility="visible" />-->Mi
 
         <TextView
             android:id="@+id/SendCodeText"
