--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -41,4 +41,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:text="" />
+
+    <net.friendsmap.ayrsa.friendsmap.UserView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:id="@+id/userView"
+        />
+
 </FrameLayout>
